# decalque

./: .gitignore  README.md  dune-project
_build/: .db  .digest-db  log
_build/.promotion-staging/test/: decalque.t
_build/default/: README.md  decalque.dune-package  decalque.install  decalque.opam
_build/default/lib/: ast.ml  cli.ml  decalque.cma  decalque.cmxa  decalque.cmxs  decalque.ml-gen  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/lib/.decalque.objs/: decalque__Cli.impl.all-deps  decalque__Cli.impl.d  decalque__Lexer.impl.all-deps  parser__mock.impl.all-deps
_build/default/lib/.decalque.objs/byte/: decalque.cmi  decalque.cmo  decalque.cmt  decalque__Ast.cmi  decalque__Ast.cmo  decalque__Ast.cmt  decalque__Cli.cmi  decalque__Cli.cmo  decalque__Cli.cmt  decalque__Lexer.cmi  decalque__Lexer.cmo  decalque__Lexer.cmt  decalque__Parser.cmi  decalque__Parser.cmo  decalque__Parser.cmt  decalque__Parser.cmti
_build/default/lib/.decalque.objs/native/: decalque.cmx  decalque__Ast.cmx  decalque__Cli.cmx  decalque__Lexer.cmx  decalque__Parser.cmx
_build/default/lib/.merlin-conf/: lib-decalque
_build/default/test/: decalque.t
_build/default/test/.merlin-conf/: exe-test_decalque
_build/default/test/.test_decalque.eobjs/byte/: dune__exe__Test_decalque.cmi  dune__exe__Test_decalque.cmti
_build/default/test/.test_decalque.eobjs/native/: dune__exe__Test_decalque.cmx
_build/install/default/lib/decalque/: META  (+2 more)
lib/: ast.ml  cli.ml  dune  lexer.mll  parser.mly
test/: decalque.t  dune
